--- a/index.html
+++ b/index.html
@@ -1,69 +1,101 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Antes de empezar, recuerda esto — Ebook</title>
-  <meta name="description" content="Este libro no es solo para leer, es una herramienta para transformar tu vida financiera. Dedica 30 minutos diarios y aplica el sistema paso a paso." />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ebook Gratis - Transforma tus Finanzas</title>
+  <meta name="description" content="Descarga gratis este ebook y aprende a transformar tu vida financiera con un sistema paso a paso.">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    body { margin:0; font-family:'Montserrat',sans-serif; background:#F4F4F4; color:#1B2A49; }
-    header { text-align:center; padding:40px 20px; }
-    header h1 { font-size:40px; font-weight:800; margin:0 0 15px; }
-    header p { max-width:800px; margin:0 auto; font-size:18px; line-height:1.6; }
-    .main { display:grid; grid-template-columns:1fr 400px; gap:30px; max-width:1100px; margin:30px auto; padding:20px; }
-    .copy { background:#fff; padding:20px; border-radius:12px; box-shadow:0 4px 20px rgba(0,0,0,0.05); }
-    .copy h2 { font-size:24px; margin-bottom:15px; }
-    .rule { display:flex; gap:15px; margin-bottom:15px; }
-    .rule strong { font-size:16px; }
-    .rule .desc { font-size:14px; color:#32406f; }
-    .icon { width:40px; height:40px; display:flex; align-items:center; justify-content:center; }
-    .cta { margin-top:20px; display:flex; gap:15px; flex-wrap:wrap; }
-    .btn { padding:12px 20px; border-radius:8px; text-decoration:none; font-weight:700; font-size:15px; }
-    .btn-primary { background:#1B2A49; color:#fff; }
-    .btn-outline { border:2px solid #1B2A49; color:#1B2A49; }
-    img { width:100%; border-radius:12px; box-shadow:0 4px 20px rgba(0,0,0,0.1); }
-    footer { text-align:center; padding:20px; margin-top:30px; font-size:13px; color:#555; }
-    @media(max-width:900px){ .main{grid-template-columns:1fr;} header h1{font-size:32px;} }
+    body {
+      font-family: 'Montserrat', sans-serif;
+      margin: 0;
+      background: #F4F4F4;
+      color: #1B2A49;
+    }
+    header {
+      text-align: center;
+      padding: 50px 20px;
+      background: #1B2A49;
+      color: white;
+    }
+    header h1 {
+      font-size: 40px;
+      margin: 0 0 15px;
+    }
+    header p {
+      font-size: 18px;
+      max-width: 700px;
+      margin: 0 auto;
+      line-height: 1.6;
+    }
+    .container {
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 20px;
+      text-align: center;
+    }
+    .ebook-img {
+      width: 280px;
+      border-radius: 15px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.15);
+      margin-bottom: 30px;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      max-width: 400px;
+      margin: 0 auto;
+    }
+    input {
+      padding: 12px;
+      border: 2px solid #1B2A49;
+      border-radius: 8px;
+      font-size: 16px;
+    }
+    button {
+      padding: 15px;
+      background: #1B2A49;
+      color: white;
+      font-size: 18px;
+      font-weight: 600;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    button:hover {
+      background: #2D3F6E;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
+      color: #666;
+      margin-top: 50px;
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>Antes de empezar, recuerda esto</h1>
+    <h1>Descarga Gratis tu Ebook</h1>
     <p>Este libro no es solo para leer, es una herramienta para transformar tu vida financiera. 
-    En las próximas páginas aprenderás un sistema paso a paso que ha ayudado a muchas personas a salir de deudas y comenzar a construir estabilidad. 
-    El verdadero cambio no viene de la información, sino de la acción.</p>
+       Descárgalo ahora y comienza el cambio hoy.</p>
   </header>
 
-  <div class="main">
-    <div class="copy">
-      <h2>Tres reglas de oro</h2>
-      <div class="rule">
-        <div class="icon">⏰</div>
-        <div><strong>Compromiso</strong><div class="desc">Dedica 30 minutos diarios a aplicar este plan.</div></div>
-      </div>
-      <div class="rule">
-        <div class="icon">🔎</div>
-        <div><strong>Honestidad</strong><div class="desc">Sé sincero con tus ingresos, gastos y deudas.</div></div>
-      </div>
-      <div class="rule">
-        <div class="icon">🔥</div>
-        <div><strong>Constancia</strong><div class="desc">Los resultados vendrán si sigues cada paso sin rendirte.</div></div>
-      </div>
+  <div class="container">
+    <img src="https://via.placeholder.com/280x400.png?text=Portada+Ebook" alt="Ebook Finanzas" class="ebook-img">
 
-      <div class="cta">
-        <!-- Descarga directa (ajusta enlace) -->
-        <a class="btn btn-primary" href="assets/ebook.pdf" download>📥 Descargar Ebook Gratis</a>
-        <!-- Captura de email (opcional, servicio externo) -->
-        <a class="btn btn-outline" href="#">Quiero recibirlo por email</a>
-      </div>
-    </div>
-
-    <div>
-      <img src="assets/person-notebook.jpg" alt="Persona revisando metas en una libreta">
-    </div>
+    <h2>Ingresa tu correo para recibirlo</h2>
+    <form action="https://formspree.io/f/mayvlbqr" method="POST">
+      <input type="email" name="email" placeholder="Tu correo electrónico" required>
+      <button type="submit">Recibir Ebook</button>
+    </form>
   </div>
 
-  <footer>© 2025 — Tu Nombre. Todos los derechos reservados.</footer>
+  <footer>
+    © 2025 - Tu Nombre | Todos los derechos reservados
+  </footer>
 </body>
 </html>
